--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body{
 #logo h1{
 	font-weight: bold;
 	font-size: 25px;
-	color: #FB314E;
+	color: #2ECC71;
 }
 
 #menu{
@@ -56,14 +56,14 @@ body{
 }
 
 #menu ul li a:hover{
-	color: #FB314E;
+	color:#2ECC71 ;
 }
 
 /*------------------------------------------------------SLIDER------------------------------------------------------*/
 
 #slider{
 	height: 300px;
-	background: #FB314E;
+	background: #2ECC71 ;
 }
 
 #slider h2{
