--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body{
 #logo h1{
 	font-weight: bold;
 	font-size: 25px;
-	color: #2ECC71;
+	color: #0085CA;
 }
 
 #menu{
@@ -63,7 +63,7 @@ body{
 
 #slider{
 	height: 300px;
-	background: #2ECC71 ;
+	background: #0085CA;
 }
 
 #slider h2{
