--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body{
 }
 .img4{
 	width: 100%;
-	heigth: 100%;
+	height: 100%;
 }
 
 #menu{
@@ -187,8 +187,8 @@ footer .subheader{
 		margin: 0px auto;
 	}
 	.img4{
-	width: 100%;
-	heigth: 100%;
+		width: 100%;
+		height: 100%;
 	}
 	#menu{
 		float: none;
